# plates-rp-fem

./: .gitignore  CITATION.cff  NOTES-LICENSE.md  README.md  environment.yml  pyproject.toml
docs/: CONVENTIONS.md  RESEARCH_PLAN.md  _migrated_plan_note.md
draft/: preliminary_results.tex
experiments/e01_validation/: README.md  RESULTS.md  diag_ritz_nleg.py  results.json  step1_validate.py
experiments/e02_protocol_b/: RESULTS.md  analyze.py  results.json  results_raw.json  run_sweep.py
experiments/e04_gapA/: README.md  RESULTS.md  analyze_gapA.py  results.json  results_raw.json  run_gapA.py
experiments/e05_superellipse/: README.md  RESULTS.md  analyze_superellipse.py  diag_stability.py  results.json  results_raw.json  run_superellipse.py
experiments/e06_designed_coupling/: README.md  RESULTS.md  results.json  run_e6.py
experiments/e07_completeness/: RESULTS.md  results.json  run_e7.py
experiments/e08_gapA_geometries/: README.md  RESULTS.md  analyze_e8.py  results.json  results_raw.json  run_e8.py
experiments/e09_gapA_2048/: README.md  RESULTS.md  results_raw.json  run_e9.py
experiments/e10_annulus/: RESULTS.md  results.json  run_e10.py
experiments/e11_mindlin/: RESULTS.md  results.json  results_raw.json  run_e11.py
experiments/e12_damping_AIdagger/: README.md  RESULTS.md  results_raw.json  run_e12.py
experiments/e12b_ai_ginibre/: README.md  RESULTS.md  RESULTS_E12C.md  results_e12c.json  results_raw.json  run_e12b.py  run_e12c.py
experiments/e13_aspect_sweep/: RESULTS.md  results_raw.json  run_e13.py
experiments/e14_c0ip_gapA/: README.md  (+3 more)
(+208 files in other folders)
